<resources>
    <string name="app_name">MtimeApp</string>
    <string name="searchBox_hint">找影片/影院/影人</string>
    <string name="btn_search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="hot_search_text1">伦敦陷落</string>
    <string name="hot_search_text2">我的特工爷爷</string>
    <string name="hot_search_text3">火锅英雄</string>
    <string name="search_history">搜索历史</string>
    <string name="btn_search_clear_history">点击清空历史</string>
    <string name="str_minsago_str">刚刚来过</string>
    <string name="str_hoursago">小时前</string>
    <string name="str_yesterday">昨天 </string>
    <string name="str_today">今天 </string>
    <string name="str_minsago">分钟前</string>
    <string name="str_secondago">秒前</string>
    <string name="str_sunday">周日</string>
    <string name="str_monday">周一</string>
    <string name="str_tuesday">周二</string>
    <string name="str_wednesday">周三</string>
    <string name="str_thursday">周四</string>
    <string name="str_friday">周五</string>
    <string name="str_saturday">周六</string>
    <string name="playername">我的时光网</string>

    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
</resources>
