<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0075C4"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/iv_search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:src="@drawable/find_news_img_detail_top_left_arrow" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_search_box_bg"
            android:gravity="center_vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/et_search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/title_bar_search_zoomin"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/searchBox_hint"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_search_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/title_bar_search_button_scan_background" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_search_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:text="@string/btn_search"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lv_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"></ListView>

        <ScrollView
            android:id="@+id/sv_search_prompt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F6F6"
                        android:padding="10dp"
                        android:text="@string/hot_search"
                        android:textSize="18sp"></TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/tv_search_hot_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/register_get_signcode_icon"
                            android:padding="10dp"
                            android:text="@string/hot_search_text1"
                            android:textColor="#097AC6"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_search_hot_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/register_get_signcode_icon"
                            android:padding="10dp"
                            android:text="@string/hot_search_text2"
                            android:textColor="#097AC6"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_search_hot_text3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/register_get_signcode_icon"
                            android:padding="10dp"
                            android:text="@string/hot_search_text3"
                            android:textColor="#097AC6"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_search_hot_text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/register_get_signcode_icon"
                        android:padding="10dp"
                        android:text="@string/hot_search_text1"
                        android:textColor="#097AC6"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F6F6F6"
                        android:padding="10dp"
                        android:text="@string/search_history"
                        android:textSize="18sp"></TextView>

                    <ListView
                        android:id="@+id/lv_search_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></ListView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </FrameLayout>
</LinearLayout>